web/themes/custom/mungo/assets_src/sass/mixins/menus.mixins.scss
/* Tie together the burger menu handle (checkbox and label) with the UL. */
@mixin mungo-burger {
  ul.menu--main {
    z-index: 3;
    display: none;
    position: fixed;
    left: 0;
    width: 100%;
    height: calc(100% - 70px);
    overflow: scroll;
    @include media-small {
      position: inherit;
      display: block;
      width: auto;
      height: auto;
      background: none;
      overflow: auto;
    }
  }
  .burger--main--menu--toggle {
    z-index: 1;
    position: absolute !important;
    top: 23px;
    right: 10px;
    &:before, 
    &:after {
      left: 0;
    }

    @include burger(30px, 3px, 7px, $bluish);
    @include media-small {
      display: none;
    }
  }
  #main-menu-toggle {
    display: none;
  }
  #main-menu-toggle:checked ~ .burger--main--menu--toggle {
    @include burger-to-cross;
  }
  #main-menu-toggle:checked ~ .menu--main {
    display: block;
  }
}

/* Primary menu representation on mobile devices */
@mixin main-menu-entries--mobile  {
  font-weight: 600;
  font-size: 16px;
  &:after {
    color: $bluish;
    font-weight: 100;
    position: absolute;
    right: $spacing-small;
    top: -18px;
    font-size: 60px;
    content: '›';
  }
  &.opened:after {
    transform: rotate(90deg);
  }
}
/* Primary menu overrides for tablet and desktop */
@mixin main-menu-entries {
  a {
    color: #000
  }
  font-size: 13px;
  text-transform: uppercase;
  &:after {
    content: '';
  }
}

@mixin inline-menu {
  // Spacing should be large, but only half of it pr element.
  $halfsize: $spacing-large / 2;

  // Subtract the added spacing on the container.
  margin: 0 (-$halfsize);
  li {
    display: inline-block;
    vertical-align: top;
  }
}


// Add a downwards-pointing arrow to a dropdown menu.
// Should be invoked with the argument "up" for the active-state.
@mixin menu_chevron ($direction: 'down') {
  @extend .glyphicon;
  @extend .glyphicon-chevron-down;
  @include transform(rotate(0deg));
  @include transition(all 300ms ease-out);

  position: absolute;
  right: 20px;
  line-height: 13px * 2 + $spacing-small; // font-size * 2 + padding

  // When active, rotate the icon to point upwards.
  @if $direction == 'up' {
    @include transform(rotate(180deg));
  }
}

